bugfix: fixes css overflow issue for ListSelector

--- a/blocks/ls/ls.css
+++ b/blocks/ls/ls.css
@@ -1,9 +1,11 @@
 .ls {
-  width: var(--ls-width);
+  width: 90%;
   min-height: 150px;
   max-height: 400px;
 
   padding: 30px;
+  margin: 0 auto;
+  box-sizing: border-box;
 
   background-color: #fff;
   border-radius: 10px;
@@ -12,7 +14,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: 20px;
 }
 
@@ -28,26 +30,28 @@
   transition: all 400ms ease;
 }
 
-.ls__form:has(:focus){
-  max-width: 90%;
+.ls__form:has(:focus) {
+  max-width: 60%;
 }
 
 .ls__input {
+  height: 35px;
+  padding: 5px 0 5px 20px;
+
   flex-basis: 100%;
+
   border: 0;
   border-bottom: 1px solid gray;
   border-radius: 0;
-  height: 35px;
-  padding: 5px 0 5px 20px;
+
   font-size: 18px;
   color: #333;
 }
 
 .ls__btn-transparent {
-  background-color: transparent;
-  border: 0;
   padding: 0;
-
+  border: 0;
+  background-color: transparent;
   cursor: pointer;
 }
 
@@ -73,7 +77,7 @@
   list-style: none;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, min-content));
+  grid-template-columns: repeat(auto-fit, minmax(140px, min-content));
   column-gap: 20px;
 }
 
@@ -100,23 +104,38 @@
 }
 
 @media screen and (max-width:768px) {
-  .ls__container{
+  .ls__container {
     padding: 5px;
   }
 
-  .ls__list{
+  .ls__list {
     column-gap: 10px;
   }
 
-  .ls__list-item{
+  .ls__list-item {
     font-size: 14px;
     font-weight: bold;
+  }
+}
+
+@media screen and (max-width:555px) {
+  .ls__form {
+    max-width: 100%;
+  }
+
+  .ls__form:has(:focus) {
+    max-width: 100%
+  }
+
+  .ls__input{
+    max-width: 70%;
   }
 }
 
 @media screen and (max-width:340px) {
   .ls__form {
     gap: 0;
+
   }
 
   .ls__input {
